--- a/gradle.properties
+++ b/gradle.properties
@@ -17,9 +17,9 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-VERSION_NAME=2.2.3-non-native
-VERSION_CODE=24
-GROUP=com.yalantis
+VERSION_NAME=2.2.4
+VERSION_CODE=1
+GROUP=com.huhustudio
 
 POM_DESCRIPTION=Android Library for cropping images
 POM_URL=https://github.com/Yalantis/uCrop
@@ -29,6 +29,6 @@ POM_SCM_DEV_CONNECTION=scm:git@github.com/Yalantis/uCrop.git
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0
 POM_LICENCE_DIST=repo
-POM_DEVELOPER_ID=yalantis
-POM_DEVELOPER_NAME=Yalantis
+POM_DEVELOPER_ID=hungpv2910
+POM_DEVELOPER_NAME=HungPham
 android.useAndroidX=true
